--- a/circlegui.html
+++ b/circlegui.html
@@ -14,12 +14,18 @@
     <table width="100%" height="100%" align="center">
 
 	<tr>
-		<td class="HeaderBox"><h1 class="Header">Choose a Database</h1></td>
+		<td class="HeaderBox"><h1 class="Header">Database Selection</h1></td>
 	</tr>
 	
-	<img src="TLPassive.png" id = "topLeft" height= "200" width = "200"></img>
-	<img src = "TRPassive.png" id = "topRight" height = "200" width= "200"> </img>
-
+	<img src="TLPassive.png" onmouseover="this.src='TLActive.png'" onmouseout="this.src='TLPassive.png'" id = "topLeft" height= "200" width = "200"></img>
+	<img src = "TRPassive.png" onmouseover="this.src='TRActive.png'" onmouseout="this.src='TRPassive.png'" id = "topRight" height = "200" width= "200"> </img>
+	<img src = "BLPassive.png" onmouseover="this.src='BLActive.png'" onmouseout="this.src='BLPassive.png'" id = "bottomLeft" heght = "200" width = "200"></img>
+	<img src = "BRPassive.png" onmouseover="this.src='BRActive.png'" onmouseout="this.src='BRPassive.png'" id = "bottomRight" height = "200" width = "200"></img>
+	<p id="db1">[DB1]</p>
+	<p id="db2">[DB2]</p>
+	<p id="db3">[DB3]</p>
+	<p id="db4">[DB4]</p>
+	
 </table>
     
 </body>
