--- a/Master/HTML Files/circlegui.html
+++ b/Master/HTML Files/circlegui.html
@@ -21,10 +21,10 @@
 	<img src = "Images/TRPassive.png" onmouseover="this.src='Images/TRActive.png'" onmouseout="this.src='Images/TRPassive.png'" id = "topRight" height = "400" width= "400"> </img>
 	<img src = "Images/BLPassive.png" onmouseover="this.src='Images/BLActive.png'" onmouseout="this.src='Images/BLPassive.png'" id = "bottomLeft" heght = "400" width = "400"></img>
 	<img src = "Images/BRPassive.png" onmouseover="this.src='Images/BRActive.png'" onmouseout="this.src='Images/BRPassive.png'" id = "bottomRight" height = "400" width = "400"></img>
-	<p id="db1">[ECE]</p>
-	<p id="db2">[KEM]</p>
-	<p id="db3">[MAA]</p>
-	<p id="db4">[MASTER]</p>
+	<p id="db1"><b>[ECE]</b></p>
+	<p id="db2"><b>[KEM]</b></p>
+	<p id="db3"><b>[MAA]</b></p>
+	<p id="db4"><b>[MASTER]</b></p>
 	
 </table>
 
