started next user interface

--- a/Master/HTML Files/logincrm.html
+++ b/Master/HTML Files/logincrm.html
@@ -21,7 +21,7 @@
 		<div id="LoginTable">
 			<table>
 		
-				<tr>
+				<tr align = >
 					<td class="Titles" align="right">Username:</td>
 					<td class="Inputs"><input type="text" size="10"></td>
 				</tr>
