--- a/Master/HTML Files/DBTemplate.html
+++ b/Master/HTML Files/DBTemplate.html
@@ -40,7 +40,7 @@
 		
 				<table id= "tableBorder"  >
 			<tr >
-				<td  bgcolor = #39286C width = 100><p id = "fontColor"> <b>All</b> </p> </td>
+				<td  bgcolor = #39286C width = 10% align = "center"><p> <font color = "White"><b>All</b> </p> </td>
 				<td id= "tableBorder"   >Drop down arrow</td>
 				<td id= "tableBorder"  >Magnifying glass</td>
 				<td width = 100%></td>
