added a print button to the db template

--- a/Master/HTML Files/DBTemplate.html
+++ b/Master/HTML Files/DBTemplate.html
@@ -46,9 +46,10 @@
 				<td width = 100%></td>
 			</tr>
 		</table>
+	
+		<button onclick = "printFunction" src = "Images/print_button.png" id = print>print here</button>
 
-
-
+		<a href="javascript:window.print()"><img src="Images/print_button.png"></a>
 
 
 
