added logo to the centre of the cirle GUI

--- a/Master/HTML Files/DBTemplate.html
+++ b/Master/HTML Files/DBTemplate.html
@@ -47,9 +47,8 @@
 			</tr>
 		</table>
 	
-		<button onclick = "printFunction" src = "Images/print_button.png" id = print>print here</button>
 
-		<a href="javascript:window.print()"><img src="Images/print_button.png"></a>
+		<a href="javascript:window.print()"><img id= "print" src="Images/print_button.png"></a>
 
 
 
