--- a/Master/HTML Files/circlegui.html
+++ b/Master/HTML Files/circlegui.html
@@ -25,6 +25,7 @@
 	<p id="db2"><b>[CEM]</b></p>
 	<p id="db3"><b>[MAA]</b></p>
 	<p id="db4"><b>[MASTER]</b></p>
+	<img src = "Images/EC_logo.png" id = "centreLogo"/>
 	
 </table>
 
