added jquery functionailty with test element (blue square animating)

--- a/Master/HTML Files/DBTemplate.html
+++ b/Master/HTML Files/DBTemplate.html
@@ -46,12 +46,14 @@
 				<td width = 100%></td>
 			</tr>
 		</table>
+		<div class = "test"></div>
 	
 
 		<a href="javascript:window.print()"><img id= "print" src="Images/print_button.png"></a>
 
-
-
+		<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script src = "JavaScript/functions.js"> </script>
 	</body>
 
 </html>
