all button + arrow

--- a/Master/HTML Files/DBTemplate.html
+++ b/Master/HTML Files/DBTemplate.html
@@ -27,12 +27,12 @@
 	</div>
 	
 	<div id = "sideMenu">
+	
+	<div class = "ALL">ALL</div>
+	<div  id = "arrow" class = "ALL" >hello</div>
 		
-		
-	</div>
-	<div id = "dataBase"> Database
-		
-	</div>
+
+	<div id = "dataBase"> Database </div>
 	<div class = "menuButtons">
 		Applications
 	</div>
