--- a/Master/HTML Files/DBTemplate.html
+++ b/Master/HTML Files/DBTemplate.html
@@ -29,8 +29,11 @@
 	<div id = "sideMenu">
 	
 	<div class = "ALL">ALL</div>
-	<div  id = "arrow" class = "ALL" >hello</div>
-		
+	<div id = "arrow" class = "ALL" ><img src="Images/filter_arrow_button.png"></div>
+	<div id = "magGlass" class = "ALL"><img src = "Images/logout_button_icon.png"></div>
+	<div id = "box" class = "ALL"></div>
+
+	
 
 	<div id = "dataBase"> Database </div>
 	<div class = "menuButtons">
