--- a/Master/HTML Files/DBTemplate.html
+++ b/Master/HTML Files/DBTemplate.html
@@ -22,30 +22,20 @@
 		    </tr>
 		</div>
 		    
-	<div id = "upperTitle">
-		Master Database
-	</div>
+	<div id = "upperTitle">Master Database</div>
 	
 	<div id = "sideMenu">
 	
 	<div class = "ALL">ALL</div>
-	<div id = "arrow" class = "ALL" ><img src="Images/filter_arrow_button.png"></div>
-	<div id = "magGlass" class = "ALL"><img src = "Images/logout_button_icon.png"></div>
-	<div id = "box" class = "ALL"></div>
-
+	<div id = "arrow"><img src="Images/filter_arrow_button.png" align="middle"></div>
+	<div id = "borderBox" ></div>
 	
-
+	
 	<div id = "dataBase"> Database </div>
-	<div class = "menuButtons">
-		Applications
-	</div>
-	<div class = "menuButtons" id = "Appointments">
-		Appointments
-	</div>
-	<div class = "menuButtons" id = "Placements">
-		Placements
-	</div>
-		<a href = "javascript:window.print()"><img id = "print" src ="Images/print_button.png"></a>
+	<div class = "menuButtons">Applications</div>
+	<div class = "menuButtons" id = "Appointments">Appointments</div>
+	<div class = "menuButtons" id = "Placements">Placements</div>
+	<a href = "javascript:window.print()"><img id = "print" src ="Images/print_button.png"></a>
 	<img id = "Overlay2" href = "Images/Record_Screen_Overlay.png">
 		<script src = "//code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script src = "//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
