--- a/Master/HTML Files/DBTemplate.html
+++ b/Master/HTML Files/DBTemplate.html
@@ -26,8 +26,8 @@
 	
 	<div id = "sideMenu">
 	
-	<div class = "ALL">ALL</div>
-	<div id = "arrow"><img src="Images/filter_arrow_button.png" align="middle"></div>
+	<div class = "ALL"><bold>ALL</bold></div>
+	<div id = "arrow"><img src="Images/filter_arrow_button.png"></div>
 	<div id = "borderBox" ></div>
 	
 	
