more to overlay|

--- a/Master/HTML Files/DBTemplate.html
+++ b/Master/HTML Files/DBTemplate.html
@@ -29,7 +29,10 @@
 	<div class = "ALL"><bold>ALL</bold></div>
 	<div id = "arrow"><img src="Images/filter_arrow_button.png"></div>
 	<div id = "borderBox" ></div>
+	<div id = "aboveALL" ><center>Hello</center></div>
 	
+	
+
 	
 	<div id = "dataBase"> Database </div>
 	<div class = "menuButtons">Applications</div>
