DB template - print button, add button, side bar and main title added

--- a/Master/HTML Files/dataBaseTemplateNew.html
+++ b/Master/HTML Files/dataBaseTemplateNew.html
@@ -10,8 +10,9 @@
 	<link rel="stylesheet" type="text/css" href="CSS_Files/databaseTemplateNew.css">
 	
 	</head>
-    <div>
-        	<a href = "javascript:window.print()"><img id = "printButton" src ="Images/print_button.png"></a>    
-    </div>
-
+	<body>
+    <div><a href = "javascript:window.print()"><img id = "printButton" src ="Images/print_button.png"></a></div>
+	<div id = "mainTitle">[Title of Database Here]</div>
+	<div id = "sideMenuBacking"></div>
+	<div id = "addButton" ><img src ="Images/add.png"></div>
 	<body>
