More added to the db template, bottom navigation bar left

--- a/Master/HTML Files/dataBaseTemplateNew.html
+++ b/Master/HTML Files/dataBaseTemplateNew.html
@@ -19,7 +19,7 @@
 	<div id = "userIcon">
 		<table>
 			<tr>
-				<td id = "userImage" colspan = "3"><img src = "Images/avatar.png"></td>
+				<td id = "userImage" colspan = "3"><img src = "Images/avatar.png" width = 250 height=150></td>
 			</tr>
 			<tr>
 				<td class = "tableData" width = 52 height = 52><img src = "Images/help_button_icon.png"></td>
@@ -28,4 +28,14 @@
 			</tr>
 		</table>
 	</div>
+	
+	<div id = "searchBar"><img src = "Images/magnifying_glass.png"></div>
+	
+	<div id = "textAboveAll">dwdddwdw</div>
+    
+    
+    <div class = "sideMenuButtons" >Applications</div>
+    <div class = "sideMenuButtons" id ="appointments">Appointments</div>
+    <div class = "sideMenuButtons" id = "id2">Placements</div>
+
 	<body>
