added navigational bar and drop down menu

--- a/Master/HTML Files/dataBaseTemplateNew.html
+++ b/Master/HTML Files/dataBaseTemplateNew.html
@@ -7,7 +7,7 @@
 	   
 		
 	<title>TEMPLATE</title>
-	<link rel="stylesheet" type="text/css" href="databaseTemplateNew.css">
+	<link rel="stylesheet" type="text/css" href="CSS_Files/databaseTemplateNew.css">
 	
 	</head>
 	<body>
@@ -37,7 +37,29 @@
     <div class = "sideMenuButtons" >Applications</div>
     <div class = "sideMenuButtons" id ="appointments">Appointments</div>
     <div class = "sideMenuButtons" id = "id2">Placements</div>
-
+	
+	
+	<!----------------------------------------------------------------------->
+	
+	
+	
+	<div>
+		<img class = "buttons" id = "first" src = "Images/first_record_button.png">
+		<img class = "buttons" id = "previous" src = "Images/previous_record_button.png"> 
+		<img class = "buttons" id = "next" src = "Images/next_record_button.png">
+		<img class = "buttons" id = "last" src = "Images/last_record_button.png">
+		<p id = "pageIndicator"> Page # of # </p>
+	</div>
+	
+	<div>
+		<select id = "dropDown">
+			<option class = "dropDown_text" value = "All">All</option>
+			<option class = "dropDown_text"  value = "Tutors">Tutors</option>
+			<option class = "dropDown_text" value = "Company">Company</option>
+		</select>
+	</div>
+	
+	
+	
 	<body>
-
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
